# rawtype

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
rawtype/: main.py
